@@ -1,3 +1,8 @@
+FixVMUX branch
+~~~~~~~~~~~~~~
+* Disable (and probably break) Mark5-based interlaced VDIF
+* Update File and Mark6 datastreams for interlaced VDIF to improve multiplexing
+
 Version 2.7
 ~~~~~~~~~~~
 * Fix problem with "Allow DifxParameter message to specify new stop time" that caused premature termination of the job.  Bug introduced in SVN commit 7910 on July 20, 2017
